--- a/index.html
+++ b/index.html
@@ -1,58 +1,47 @@
 <!DOCTYPE HTML>
-<html lang="pl">
-<head>
-	<meta charset="utf-8"/>
-	<title>NAJLEPSI PRZYJACIELE CZŁOWIEKA</title>
-	<meta name="description" content="Psi przyjaciele i schroniska w najbliższej okolicy"/>
-	<meta name="keywords" content="zwierzęta"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-</head>
-
-<body  style="background-color: #ccccff">
-	<div style="text-align: center">
-	<img src="img/B.gif"  />
-	<h1>NAjLEPSI PRZYJACIELE CZŁOWIEKA</h1>
-	<img src="img/B.gif"  />
-	</div>
-	<h2>Nie od dziś wiadomo, że najlepszym przyjacielem człowieka jest jego zwięrzątko domowe. Zwykle jest to kot albo pies.</h2>
-	<h3>Niestety większość z nich nie ma swojego domu i często znajduję się w schroniskach. W poniższych linach podane są dwa w naszej najbliższej okolicy.</h3>
-	Schronisko Stalowa Wola: <a href="http://psiaprzystan.pl/" target="_blank" title="Sprawdź co robią!"> 
-	Przytulisko Psia Przystań
-	</a>
-	
-	<br/><br/>
-	
-	<a href="http://psiaprzystan.pl/" target="_blank" title="To oni!">
-	<div style="text-align: center">
-	<img src="img/6.jpg" />
-	</div>
-	</a>
-	
-	<br/><br/>
-	
-	Schronisko Sandomierz:  <a href="https://przytulisko-na-wisniowej.business.site/" target="_blank" title="Sprawdź co robią!">
-	Schronisko na Wiśniowej
-	</a>
-	
-	<br/><br/>
-	
-	<a href="https://przytulisko-na-wisniowej.business.site/" target="_blank" title="To oni!">
-	<div style="text-align: center">
-	<img src="img/7.jpg"/>
-	</div>
-	</a>
-	
-	<br/><br/>
-	
-	<h4> A to moi najlepsi zwierzęcy przyjaciele!</h4>
-	
-	<div style="text-align: center">
-	<img src="img/1.jpg" width="1000" />
-	<img src="img/5.jpg" width="1000" />
-	<img src="img/3.jpg" width="1000" />
-	<img src="img/C.gif" width="1000" />
-	</div>
-	
-
-</body>
+<html>
+	<head>
+		<meta charset="utf-8" />
+	`	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<style>
+			#imageSlider-container{
+				margin-left:10%;
+				margin-right:10%;
+				border:30px solid #F9DE88;
+				box-shadow:50px 0 #92BAFC,-50px 0 #92BAFC;
+			}
+			#imageSlider-image{
+				color:#F9DE88;
+				height:100%;
+				width:100%;
+			}
+		</style>
+		<script>
+			function imageData(_imageSrc, _imageTitle, _imageDescription) {
+				this.imageSrc = _imageSrc;
+				this.imageTitle = _imageTitle;
+				this.imageDescription = _imageDescription;
+			}
+			
+			var imageSlider_counter = 0;
+			var imageDataList = new Array();
+			
+			function Ready() {
+				document.getElementById("imageSlider-container").innerHTML = "<img id='imageSlider-image' src''/>"
+					document.getElementById("imageSlider-image").src = imageDataList[imageSlider_counter].imageSrc;
+				setInterval(function(){
+					imageSlider_counter = (imageSlider_counter + 1) % imageDataList.length;
+					document.getElementById("imageSlider-image").src = imageDataList[imageSlider_counter].imageSrc;
+				},2000);
+			}
+		</script>
+	</head>
+	<body  bgcolor=#F097B3 onLoad="Ready()">
+		<div class=container4 id="imageSlider-container" style="widht=528px; height=355px"></div>
+		<script>
+			imageDataList.push(new imageData("img/gallery/0.jpg", "Title Image 0", "Description."));
+			imageDataList.push(new imageData("img/gallery/1.jpg", "Title Image 1", "Description."));
+			imageDataList.push(new imageData("img/gallery/0.jpg", "Title Image 2", "Description."));
+		</script>
+	</body>
 </html>
