--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	<body  bgcolor=#F097B3 onLoad="Ready()">
 		<div class=container4 id="imageSlider-container" style="widht=640px; height=427px"></div>
 		<script>
-			imageDataList.push(new imageData("s1/img/gallery/0.jpg", "Title Image 0", "Description."));
-			imageDataList.push(new imageData("s1/img/gallery/1.jpg", "Title Image 1", "Description."));
-			imageDataList.push(new imageData("s1/img/gallery/2.jpg", "Title Image 2", "Description."));
+			imageDataList.push(new imageData("img/gallery/0.jpg", "Title Image 0", "Description."));
+			imageDataList.push(new imageData("img/gallery/1.jpg", "Title Image 1", "Description."));
+			imageDataList.push(new imageData("img/gallery/2.jpg", "Title Image 2", "Description."));
 		</script>
 	</body>
 </html>
